fixed an issue where collapse doesn't work on mobile devices

--- a/src/materialize-assets/css/material-kit.css
+++ b/src/materialize-assets/css/material-kit.css
@@ -18434,7 +18434,7 @@ footer .pull-center {
     min-height: 400px;
   }
 
-  .navbar-collapse {
+  .navbar-collapse-useless {
     position: fixed;
     display: block;
     top: 0px;
@@ -18463,7 +18463,7 @@ footer .pull-center {
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
 
-  .navbar-collapse::after {
+  .navbar-collapse-useless::after {
     top: 0;
     left: 0;
     height: 100%;
@@ -18475,35 +18475,35 @@ footer .pull-center {
     z-index: 1;
   }
 
-  .navbar-collapse .dropdown-toggle:after {
+  .navbar-collapse-useless .dropdown-toggle:after {
     position: absolute;
     right: 16px;
     margin-top: 8px;
   }
 
-  .navbar-collapse .navbar-nav {
+  .navbar-collapse-useless .navbar-nav {
     position: relative;
     z-index: 3;
   }
 
-  .navbar-collapse .navbar-nav .nav-item .nav-link {
+  .navbar-collapse-useless .navbar-nav .nav-item .nav-link {
     color: #000000;
     margin: 5px 15px;
   }
 
-  .navbar-collapse .navbar-nav .nav-item.active .nav-link,
-  .navbar-collapse .navbar-nav .nav-item.active .nav-link:hover,
-  .navbar-collapse .navbar-nav .nav-item.active .nav-link:focus,
-  .navbar-collapse .navbar-nav .nav-item.active .nav-link:active {
+  .navbar-collapse-useless .navbar-nav .nav-item.active .nav-link,
+  .navbar-collapse-useless .navbar-nav .nav-item.active .nav-link:hover,
+  .navbar-collapse-useless .navbar-nav .nav-item.active .nav-link:focus,
+  .navbar-collapse-useless .navbar-nav .nav-item.active .nav-link:active {
     background-color: #ecedef;
     color: #000000;
   }
 
-  .navbar-collapse .navbar-nav .nav-item.button-container .nav-link {
+  .navbar-collapse-useless .navbar-nav .nav-item.button-container .nav-link {
     margin: 15px;
   }
 
-  .navbar-collapse .navbar-nav .nav-item:after {
+  .navbar-collapse-useless .navbar-nav .nav-item:after {
     width: calc(100% - 30px);
     content: "";
     display: block;
@@ -18512,11 +18512,11 @@ footer .pull-center {
     background-color: #e5e5e5;
   }
 
-  .navbar-collapse .navbar-nav .nav-item:last-child:after {
+  .navbar-collapse-useless .navbar-nav .nav-item:last-child:after {
     display: none;
   }
 
-  .nav-open .navbar-collapse {
+  .nav-open .navbar-collapse-useless {
     -webkit-transform: translate3d(0px, 0, 0);
     -moz-transform: translate3d(0px, 0, 0);
     -o-transform: translate3d(0px, 0, 0);
@@ -18595,8 +18595,8 @@ footer .pull-center {
     overflow-x: hidden;
   }
 
-  #navbar .navbar-collapse,
-  #navigation .navbar-collapse {
+  #navbar .navbar-collapse-useless,
+  #navigation .navbar-collapse-useless {
     display: none !important;
   }
 }
